 - Fixed an issue in rich text editors where diacritics were lost after undoing
   then redoing.
 - The Mudim script is disabled by default, since Mudim is widespread and
   disabling it does not significantly impact performance.
 - Unicode characters are now allowed in ignored textbox IDs.
 - Pressing Enter while focused on the ID textbox adds the ID to the list.
 - Pressing Backspace or Delete while focused on the Ignored Textboxes list
   removes the selected textbox IDs from the list.
 - AVIM now checks a textbox's name in addition to its ID when determining
   whether to ignore the textbox.

Version 20080728.325 (Friday, April 17, 2009)
 - Added experimental support for the Bespin editor by Mozilla Labs.
 - Added support for Songbird 1.1.
 - Fixed an issue in Komodo IDE and Komodo Edit where AVIM would not recognize
   SciMoz's wrapper frame, which is often focused instead of SciMoz itself.
 - Fixed an issue where the caret would sometimes drift when redoing.
 - Adjusted the Vietnamese localization's messages to be consistent with Firefox
   and Thunderbird.
 - Web developers can now disable AVIM within a specific textbox by setting its
   "ime-mode" CSS property to "disabled".
 - Fixed an issue in SeaMonkey where AVIM's toolbar buttons would appear without
   any icons.

Version 20080728.334 (Sunday, July  5, 2009)
 - Added support for Bespin 0.2.1 ("Cheeky Cirrus") and above, including
   non-Mozilla installations.
 - Added support for Songbird 1.2.
 - "Ddau+" is now treated as a misspelled word.
 - Fixed an issue where "gin`" would not become "gi`n".
 - Fixed an issue in Windows and Linux where options in the options pane were
   not enabled and disabled correctly.
 - Fixed an issue where the Restore to Default button was always enabled, even
   when the ignored IDs list was already set to the default.

Version ${Version} (${Date})
 - Fixed an issue where opening the options pane would clear the ignored IDs
   list.
 - Added support for Firefox 3.6 alpha 1.