@@ -282,6 +282,13 @@ Version 20080728.334 (Sunday, July  5, 2009)
    when the ignored IDs list was already set to the default.
 
 Version ${Version} (${Date})
+ - Added partial support for Microsoft Silverlight applets. Telex and VNI now
+   work in standard Silverlight textboxes. However, VIQR and VIQR* are not
+   supported. Dynamically loaded Silverlight applets are not recognized.
+ - Added support for Bespin 0.4 ("Stratospheric Stratus").
+ - Added support for Firefox 3.6 alpha 1.
  - Fixed an issue where opening the options pane would clear the ignored IDs
    list.
- - Added support for Firefox 3.6 alpha 1.
+ - Fixed an issue where a backslash would not be treated as a word boundary.
+ - VIQR and VIQR* dead keys can now be escaped using a backslash when the Auto
+   input method is active.
